# finshare

./: README.md  pyproject.toml
examples/: 11_security_list.py  README.md
finshare/: __init__.py  mcp_server.py
finshare/sources/: eastmoney_source.py  fund_source.py  future_source.py
finshare/stock/feature/: client.py
finshare/stock/security_list/: __init__.py
tests/: test_recent_mcp_fixes.py
