[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finshare"
version = "0.1.2"
description = "A professional financial data fetching toolkit for Python"
readme = "README.md"
authors = [
    {name = "Meepo Team", email = "support@meepoquant.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["quantitative", "trading", "data", "finance", "stock", "quant"]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "baostock>=0.8.9",
    "pytdx>=1.72",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "requests>=2.31.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meepoquant.com"
Repository = "https://github.com/finvfamily/finshare"
"Bug Tracker" = "https://github.com/finvfamily/finshare/issues"
